# sera_deletado

./: README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: outdated.yml  safety.yml  unittest.yml
app/: __init__.py
tests/: conftest.py  test_app.py
