[tool.poetry]
name = "sera_deletado"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.3.2"
pytest = "^6.2.3"
safety = "^1.10.3"
pyupio = "^1.1.2"
pip-check = "^2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
